# vnas-stats

./: .dockerignore  ArtccUpdater.Dockerfile  Cargo.toml  Fetcher.Dockerfile  Processor.Dockerfile  Settings.toml  compose.yaml
artcc_fetcher/: Cargo.toml  Dockerfile
artcc_fetcher/migrations/: 20250327090000_create_facilities.sql
artcc_fetcher/src/: main.rs  model.rs
artcc_updater/: Cargo.toml
artcc_updater/src/: main.rs
backend/: .gitignore  Api.Dockerfile  Cargo.toml
backend/artcc_updater/: Cargo.toml
backend/artcc_updater/src/: main.rs
backend/data_api/: Cargo.toml
backend/data_api/src/: main.rs  state.rs
backend/data_api/src/v1/: api_models.rs  error.rs  mod.rs  router.rs  session.rs  utils.rs
backend/data_api/src/v1/db/: queries.rs
backend/data_api/src/v1/extractors/: metadata.rs  mod.rs  params.rs
backend/data_api/src/v1/handlers/: active_sessions.rs  auth.rs  mod.rs  param_validators.rs  params.rs  stats.rs
backend/data_api/src/v1/middleware/: auth.rs
backend/datafeed_backup_worker/: Cargo.toml  wrangler.toml
backend/datafeed_backup_worker/src/: lib.rs
backend/datafeed_fetcher/: Cargo.toml
backend/datafeed_fetcher/src/: main.rs
backend/datafeed_processor/: Cargo.toml
backend/datafeed_processor/src/: error.rs  helpers.rs  logging.rs  main.rs  metrics.rs
backend/datafeed_processor/src/database/: queries.rs
backend/shared/: Cargo.toml
backend/shared/migrations/: 20251210190605_create_active_spans.sql  20251210212628_add_active_stats.sql  20251217062806_create_sessions_table.sql
backend/shared/src/: lib.rs  vatsim.rs
backend/shared/src/vnas/: api.rs
data_api/: Cargo.toml
data_api/src/: main.rs
data_api/src/v1/: db_helpers.rs  mod.rs  traits.rs
data_api/src/v1/db/: queries.rs
data_api/src/v1/handlers/: active_sessions.rs  mod.rs  stats.rs
datafeed_fetcher/: Cargo.toml
datafeed_fetcher/src/: error.rs  main.rs
datafeed_processor/: Cargo.toml
datafeed_processor/migrations/: 20250325162010_initial_create.sql
datafeed_processor/src/: error.rs  helpers.rs  logging.rs  main.rs
datafeed_processor/src/database/: mod.rs  models.rs  queries.rs
discord/: Cargo.toml  Dockerfile
discord/migrations/: 20251221185533_create_initial.sql
discord/src/: audit.rs  commands.rs  config.rs  db.rs  event_handler.rs  health.rs  jobs.rs  main.rs  roles.rs  vatsim.rs  vatusa.rs
discord/src/api_clients/: mod.rs  vatsim.rs
frontend/: .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.toml
frontend/app/: bindings.ts
frontend/app/routes/: home.tsx
frontend/src/: App.tsx  IronMicHistory.tsx  app.css  bindings.ts  index.css  main.tsx  router.tsx
frontend/src/components/: ActivityChart.tsx  Privacy.tsx
frontend/src/components/icons/: DiscordIcon.tsx  GithubIcon.tsx
frontend/src/components/layout/: AppSidebar.tsx  Footer.tsx  Layout.tsx  TopNavbar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  NavigationMenu.tsx  Prose.tsx  Separator.tsx  Sheet.tsx  Sidebar.tsx  Skeleton.tsx  Table.tsx  TextField.tsx  Tooltip.tsx
frontend/src/queries/: iron-mic.ts
migrations/: 20250325162010_initial_create.sql
shared/: Cargo.toml
shared/migrations/: 20250325162010_initial_create.sql
shared/src/: lib.rs
shared/src/vnas/: api.rs  datafeed.rs  mod.rs
shared/tests/: verify_dtos.rs
