[workspace]
members = ["datafeed_fetcher", "datafeed_processor", "shared"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
rsmq_async = "15.0.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.97"
figment = { version = "0.10.19", features = ["toml", "env"] }
reqwest = { version = "0.12.15", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid", "json"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v7"] }