[workspace]
members = ["datafeed_fetcher", "datafeed_processor", "shared", "artcc_updater", "data_api"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
reqwest = { version = "0.12.24", features = ["json"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "chrono", "uuid", "json"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
zstd = "0.13.3"
axum = "0.8.7"
parking_lot = "0.12.5"
tokio-util = "0.7.17"
