[package]
name = "datafeed_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmq_async.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
shared = { path = "../shared" }
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true