[package]
name = "datafeed_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
rsmq_async.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
anyhow.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true