[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.42"
figment = { version = "0.10.19", features = ["env"] }
poise = "0.6.1"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
serenity = { version = "0.12.4", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
