[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
chrono.workspace = true
figment.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tracing.workspace = true
tokio-util.workspace = true
tokio.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tonic.workspace = true
opentelemetry-resource-detectors.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
opentelemetry-appender-tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio.workspace = true
